# leather_store

./: .gitignore  README.md  Untitled  build.sh  create_admin.py  db.sqlite3  main.py  pyproject.toml  render.yaml  requirements.txt  tests.py
catalog/: admin.py  cart.py  context_processors.py  forms.py  models.py  utils.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_image.py  0003_category_product_category.py  0004_product_created_at.py  0005_productimage.py  0006_order_orderitem.py  0007_product_slug.py  0007_product_slug_alter_category_slug.py  0008_alter_category_slug.py  0008_merge_20260407_1406.py
catalog/templates/catalog/: Untitled  base.html  cart_detail.html  index.html  order_create.html  order_created.html  product_detail.html  product_list.html
catalog/tests/: test_views.py
config/: Untitled  settings.py  urls.py
tests_e2e/: test_basic_func.py
